Button group spacing fixed
Fixed #5 by adding “.btn-group-sz” to div that has “button-group” and
updating css

--- a/rendered/simple-forms-style.css
+++ b/rendered/simple-forms-style.css
@@ -1,6 +1,8 @@
 /* Fonts */
 
+/**
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 @font-face {
   font-family: "Yu Gothic";
   font-weight: 100;
@@ -60,7 +62,7 @@
   font-weight: bold;
 
   src: local("Yu Mincho Bold");
-}
+}　**/
 
 /* Spacing */
 
@@ -104,4 +106,12 @@ input[type=number]::-webkit-inner-spin-button {
 
 input[type=number] {
     -moz-appearance:textfield;
+}
+
+/* Button Group */
+.btn-group-sz {
+  margin-top: 40px;
+}
+.btn-group-sz label {
+  width: 100px;
 }
